<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnComenzar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="pulsaJugar"
        android:text="@string/Jugar"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <LinearLayout
        android:id="@+id/tablero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnComenzar"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnComenzar"
        android:layout_alignBottom="@+id/btnComenzar"
        android:layout_toRightOf="@+id/btnComenzar"
        android:onClick="pulsaSalir"
        android:text="@string/Salir"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnNivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSalir"
        android:layout_alignBottom="@+id/btnSalir"
        android:layout_toRightOf="@+id/btnSalir"
        android:onClick="pulsaNivel"
        android:text="@string/Nivel"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnHonor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tablero"
        android:layout_toRightOf="@+id/btnNivel"
        android:onClick="pulsaHonor"
        android:text="@string/Honor"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>